--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "5.9.3",
     "@react-navigation/stack": "5.14.3",
     "@use-expo/font": "^2.0.0",
+    "axios": "^0.21.1",
     "expo": "^42.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-asset": "~8.3.2",
