--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/slider": "3.0.3",
     "@react-navigation/bottom-tabs": "^5.5.1",
     "@react-navigation/compat": "^5.1.25",
     "@react-navigation/drawer": "5.12.4",
@@ -25,17 +26,25 @@
     "expo": "^42.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-asset": "~8.3.2",
+    "expo-av": "~9.2.3",
     "expo-font": "~9.2.1",
+    "expo-video-player": "^2.0.1",
     "express": "^4.17.1",
     "galio-framework": "^0.8.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-dom": "^17.0.2",
+    "react-media-player": "^0.7.9",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-modal-dropdown": "git+https://github.com/siemiatj/react-native-modal-dropdown.git",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0"
+    "react-native-screens": "~3.4.0",
+    "react-native-sound-player": "^0.11.0",
+    "react-native-webview": "^11.6.5",
+    "react-native-youtube-iframe": "^2.1.1",
+    "react-player": "^2.9.0"
   },
   "devDependencies": {
     "@bam.tech/react-native-make": "^3.0.3",
